--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "firebase": "^10.11.0",
+    "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,7 +16,9 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
-    "web-vitals": "^2.1.4"
+    "reselect": "^5.1.0",
+    "web-vitals": "^2.1.4",
+    "yarn": "^1.16.0"
   },
   "resolutions": {
     "babel-jest": "24.7.1"
