--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-redux": "^9.1.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "reselect": "^5.1.0",
     "web-vitals": "^2.1.4",
     "yarn": "^1.16.0"
